...
                        Column(
                          children: [
                            SizedBox(
                              width: textFieldWidth,
                              child: CustomeTextFormField(
                                maxline: 1,
                                key: const Key('email'),
                                textEditingController: emailController,
                                hintText:
                                    // "Email",
                                    AppLocalizations.of(context)!.email,
                                obscureText: false,
                                fillColor:
...
                            SizedBox(
                              height: height * 0.02,
                            ),
                            SizedBox(
                              width: textFieldWidth,
                              child: CustomeTextFormField(
                                key: const Key('password'),
                                maxline: 1,
                                textEditingController: passwordController,
                                hintText:
                                    // "Password",
                                    AppLocalizations.of(context)!.password,
                                obscureText: showPasswords,
...
                                    ],
                                  ),
                            SizedBox(
                              height: height * 0.05,
                            ),
                            GestureDetector(
                              key: const Key('login_button'),
                              onTap: () {
                                if (_formKey.currentState!.validate()) {
                                  login();
                                }
                              },
                              child: Container(
...
