...
                      SizedBox(
                        height: height * 0.04,
                      ),
                      SizedBox(
                        width: textFieldWidth,
                        child: CustomeTextFormField(
                          key: Key("username"),
                          maxline: 1,
                          hintText:
                              // "User Name",
                              AppLocalizations.of(context)!.userName,
                          textEditingController: userNameController,
                          obscureText: false,
...
                        ),
                      ),
                      SizedBox(
                        height: height * 0.02,
                      ),
                      SizedBox(
                        key: Key("email"),
                        width: textFieldWidth,
                        child: CustomeTextFormField(
                          maxline: 1,
                          textEditingController: emailController,
                          hintText:
                              // "Email",
...
                      SizedBox(
                        height: height * 0.02,
                      ),
                      SizedBox(
                        width: textFieldWidth,
                        child: CustomeTextFormField(
                          key: Key("password"),
                          maxline: 1,
                          textEditingController: passwordController,
                          hintText:
                              //  "Password",
                              AppLocalizations.of(context)!.password,
                          obscureText: showPasswords,
...
                        ),
                      ),
                      SizedBox(
                        height: height / 18,
                      ),
                      GestureDetector(
                        key: Key("registration_button"),
                        onTap: () {
                          register();
                        },
                        child: Container(
                          width: width / 3.1,
                          height: height * 0.06,
...
